--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "vodos",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,16 +13,16 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.7",
-    "@nuxthub/core": "^0.7.19",
+    "@nuxthub/core": "^0.7.24",
     "nuxt": "^3.13.2",
-    "vue": "^3.5.8",
+    "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.5.7",
-    "eslint": "^9.11.0",
+    "eslint": "^9.12.0",
     "vue-tsc": "^2.1.6",
-    "wrangler": "^3.78.7"
+    "wrangler": "^3.80.0"
   },
   "packageManager": "pnpm@9.11.0"
 }
