--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.7",
+    "@nuxt/ui": "^2.18.6",
     "@nuxthub/core": "^0.7.24",
     "nuxt": "^3.13.2",
     "vue": "^3.5.11",
