--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@cloudflare/ai-utils": "^1.0.1",
     "@nuxt/eslint": "^0.5.7",
     "@nuxt/ui": "^2.18.6",
     "@nuxthub/core": "^0.7.24",
