--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/ui": "^2.18.7",
     "@nuxthub/core": "^0.7.31",
     "nuxt": "^3.13.2",
+    "nuxt-auth-utils": "^0.4.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
